# cdhs

./: CMakeLists.txt  README.md
src/: .clang-format  CMakeLists.txt
src/cdhs/: AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  CompileError.cpp  CompileError.h  ExprParser.cpp  ExprParser.h  Grammar.cpp  Grammar.h  LR0StateMachine.cpp  LR0StateMachine.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SourceLocation.cpp  SourceLocation.h  Token.cpp  Token.h  TokenKinds.cpp  TokenKinds.h
src/cdhs/ast/: DeclStmt.cpp  DeclStmt.h  Expr.cpp  Expr.h  ForStmt.cpp  ForStmt.h  IfStmt.cpp  IfStmt.h  Primary.cpp  Primary.h  S.cpp  S.h  Sentence.cpp  Sentence.h  Stmt.cpp  Stmt.h  Term.cpp  Term.h  Terminal.cpp  Terminal.h  TranslationUnitDecl.cpp  TranslationUnitDecl.h  ValueStmt.cpp  ValueStmt.h
src/test/: CMakeLists.txt  grammar.cpp  simple_test.cpp  study_clang_ast.cpp
test/: simple_test.cdhs
